# nix-flakes

./: .gitignore  README.md
basic-devshell/: flake.nix
python-pip/: README.md  flake.nix
python-poetry/: flake.nix  pyproject.toml
